--- a/src/app/components/drinks/filter-parent/filter-parent.component.html
+++ b/src/app/components/drinks/filter-parent/filter-parent.component.html
@@ -1,108 +1,125 @@
-<app-header></app-header>
-<div
-  class="w-full flex flex-col items-center mt-10 md:mt-24 "
-  style="font-family: 'Open Sans', sans-serif;"
->
-  <h1 class="text-4xl  font-bold md:text-5xl ">
-    Selecciona tus ingredientes
-  </h1>
-</div>
 
-
-
-
-
-<div *ngIf="!loading" 
-class="mt-10 md:mt-20"
->
-
-  <div *ngFor="let item of list">
-
-    <div *ngIf="ingExist(item.ing)">
-
-      <div
-        class="w-full flex items-center flex-col mt-16"
-        style="font-family: 'Open Sans', sans-serif;"
-
-      >
-          <div
-            class="flex flex-row items-center cursor-pointer"
-            (click)="openCategory(item)"
-          >
-            <h1 class="text-3xl md:text-4xl  mr-3"> {{item.category}} </h1>
-            <img
-              src="https://imageog.flaticon.com/icons/png/512/25/25623.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
-              class="h-3 md:h-4 rounded-full shadow-sm cursor-pointer hover:shadow"
-              *ngIf="item.hidden"
-            />
-            <img
-              src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
-              class="h-4 md:h-5 rounded-full shadow-sm cursor-pointer hover:shadow"
-              *ngIf="!item.hidden"
-            />
-          </div>
-        </div>
-
-        <div
-          class="w-full flex flex-col items-center pb-10 pt-10"
-          *ngIf="!item.hidden"
-        >
-          <app-filter-child [ingredients]="item.ing" (add)="add_to_filter($event)">
-          </app-filter-child>
-          <img
-            src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
-            class="h-4 mt-6  md:mt-10 md:h-5 rounded-full shadow-sm cursor-pointer hover:shadow"
-            *ngIf="!item.hidden"
-            (click)="item.hidden = !item.hidden"
-          />
-        </div>
-      </div>
-  </div>
-</div>
-
-
-<!-----------------INGREDIENTES SELECCIONADOS----------------------------------------------------------------------------------------------------->
-
-<div class="w-full flex flex-col items-center pb-10 pt-10 mt-8" 
-style="font-family: 'Open Sans', sans-serif;"
-*ngIf="show_ing()"
->
-  <h1 class="text-2xl mb-10">Ingredientes Seleccionados</h1>
-  <div class=" grid gap-4 md:gap-6 grid-cols-3   transition ease-in duration-300"  >
-    <div *ngFor="let item of filter" >
-      <div class="w-32  md:w-48 " (click)="ing_check_off(item)">
-        <div 
-        class=" boder shadow rounded-lg p-3  flex items-center flex-col ease-in duration-300 hover:bg-orange-200"
-        >
-            <div style="  background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative; "
-            [style.backgroundImage]="'url('+ item.pic +')'"
-            class=" w-24 bg-white h-24 mb-2 md:h-40 md:w-32 md:mb-4 border shadow rounded-full ">
+<div class="flex w-full">
+  <app-navbar></app-navbar>
+  <div class="pl-64 w-full">
+    <div class="w-full">
+      <app-header></app-header>
+      <div class="w-full">
+        
+                    <div
+              class="w-full flex flex-col items-center mt-10 md:mt-24 "
+              style="font-family: 'Open Sans', sans-serif;"
+            >
+              <h1 class="text-4xl  font-bold md:text-5xl ">
+                Selecciona tus ingredientes
+              </h1>
             </div>
 
-            <p class=" text-md  text-center"> {{item.name}} </p>
-        </div>
+
+
+
+
+            <div *ngIf="!loading" 
+            class="mt-10 md:mt-20"
+            >
+
+              <div *ngFor="let item of list">
+
+                <div *ngIf="ingExist(item.ing)">
+
+                  <div
+                    class="w-full flex items-center flex-col mt-16"
+                    style="font-family: 'Open Sans', sans-serif;"
+
+                  >
+                      <div
+                        class="flex flex-row items-center cursor-pointer"
+                        (click)="openCategory(item)"
+                      >
+                        <h1 class="text-3xl md:text-4xl  mr-3"> {{item.category}} </h1>
+                        <img
+                          src="https://imageog.flaticon.com/icons/png/512/25/25623.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
+                          class="h-3 md:h-4 rounded-full shadow-sm cursor-pointer hover:shadow"
+                          *ngIf="item.hidden"
+                        />
+                        <img
+                          src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
+                          class="h-4 md:h-5 rounded-full shadow-sm cursor-pointer hover:shadow"
+                          *ngIf="!item.hidden"
+                        />
+                      </div>
+                    </div>
+
+                    <div
+                      class="w-full flex flex-col items-center pb-10 pt-10"
+                      *ngIf="!item.hidden"
+                    >
+                      <app-filter-child [ingredients]="item.ing" (add)="add_to_filter($event)">
+                      </app-filter-child>
+                      <img
+                        src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
+                        class="h-4 mt-6  md:mt-10 md:h-5 rounded-full shadow-sm cursor-pointer hover:shadow"
+                        *ngIf="!item.hidden"
+                        (click)="item.hidden = !item.hidden"
+                      />
+                    </div>
+                  </div>
+              </div>
+            </div>
+
+
+            <!-----------------INGREDIENTES SELECCIONADOS----------------------------------------------------------------------------------------------------->
+
+            <div class="w-full flex flex-col items-center pb-10 pt-10 mt-8" 
+            style="font-family: 'Open Sans', sans-serif;"
+            *ngIf="show_ing()"
+            >
+              <h1 class="text-2xl mb-10">Ingredientes Seleccionados</h1>
+              <div class=" grid gap-4 md:gap-6 grid-cols-3   transition ease-in duration-300"  >
+                <div *ngFor="let item of filter" >
+                  <div class="w-32  md:w-48 " (click)="ing_check_off(item)">
+                    <div 
+                    class=" boder shadow rounded-lg p-3  flex items-center flex-col ease-in duration-300 hover:bg-orange-200"
+                    >
+                        <div style="  background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        position: relative; "
+                        [style.backgroundImage]="'url('+ item.pic +')'"
+                        class=" w-24 bg-white h-24 mb-2 md:h-40 md:w-32 md:mb-4 border shadow rounded-full ">
+                        </div>
+
+                        <p class=" text-md  text-center"> {{item.name}} </p>
+                    </div>
+                  </div>
+                </div>  
+              </div>
+              <h1 class="text-xl mt-5">Haz click para eliminar ingredientes</h1>
+            </div>
+
+
+            <!---------------------------------------------------------------------------------------------------------------------->
+            <div
+              
+              [ngClass]="show_ing()? 'w-full flex items-center flex-col h-32 mt-6' : 'w-full flex items-center flex-col h-32 mt-20' "
+              style="font-family: 'Open Sans', sans-serif;"
+            >
+              <button
+                class="bg-orange-500 transition duration-500 ease-in-out text-md md:text-2xl px-1 py-1 text-white font-bold md:py-2 md:px-2 rounded-full hover:bg-orange-700"
+                (click)="filter_drink()"
+              >
+                <p class="py-3 px-10  ">Buscar Recetas</p>
+              </button>
+            </div>
+
+
       </div>
-    </div>  
+    </div>
   </div>
-  <h1 class="text-xl mt-5">Haz click para eliminar ingredientes</h1>
 </div>
-
-
-<!---------------------------------------------------------------------------------------------------------------------->
-<div
-  
-  [ngClass]="show_ing()? 'w-full flex items-center flex-col h-32 mt-6' : 'w-full flex items-center flex-col h-32 mt-20' "
-  style="font-family: 'Open Sans', sans-serif;"
->
-  <button
-    class="bg-orange-500 transition duration-500 ease-in-out text-md md:text-2xl px-1 py-1 text-white font-bold md:py-2 md:px-2 rounded-full hover:bg-orange-700"
-    (click)="filter_drink()"
-  >
-    <p class="py-3 px-10  ">Buscar Recetas</p>
-  </button>
-</div>
-
 <app-footer></app-footer>
+
+
+
+
+
