--- a/src/app/components/admin/drink/list-drink/list-drink.component.html
+++ b/src/app/components/admin/drink/list-drink/list-drink.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="w-full flex justify-center items-center h-full">
+<div class="w-full justify-center items-center h-full">
 
           <div class="flex space-x-4 justify-center md:w-full">
             <button (click)="create()"
