--- a/src/app/components/admin/zone/add-zone/add-zone.component.html
+++ b/src/app/components/admin/zone/add-zone/add-zone.component.html
@@ -8,7 +8,7 @@
         style="font-family: 'Open Sans', sans-serif;"
       >
         <div>
-          <h2 class="text-4xl">CREA UNA ZONA</h2>
+          <h2 class="text-xl sm:text-4xl md:text-4xl">CREA UNA ZONA</h2>
         </div>
       </div>
       <div class="w-full flex justify-center items-center h-full">
@@ -44,7 +44,7 @@
 
           <div class="md:flex md:items-center mb-6">
             <div class="md:w-1/3"></div>
-            <div class="flex space-x-4 justify-end md:w-2/3">
+            <div class="sm:flex md:flex sm:space-x-4 md:space-x-4 justify-end md:w-2/3">
               <button
                 [disabled]="form.invalid"
                 (click)="add()"
@@ -53,6 +53,7 @@
               >
                 Crear
               </button>
+              <div class="h-4"></div>
               <button
                 (click)="goBack()"
                 class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
