--- a/src/app/components/drinks/show-filter/show-filter.component.html
+++ b/src/app/components/drinks/show-filter/show-filter.component.html
@@ -4,17 +4,17 @@
     <div class="w-full">
       <app-header [hasSearchBar]="true" [searchBarContent]="'trago'"></app-header>
       <div class="w-full">        
-          <div  *ngIf="!loading" class="flex flex-wrap md:flex-no-wrap sm:flex-no-wrap -mx-2 pb-12 pt-16 pr-16 pl-16">
+          <div  *ngIf="!loading" class="flex flex-wrap md:flex-no-wrap sm:flex-wrap -mx-2 pb-12 pt-16 px-32 overflow-hidden">
             <div
               *ngFor="let x of drinks"
-              class="w-1/4 px-2 rounded overflow-hidden my-2 border shadow rounded-lg"
+              class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden border shadow rounded-lg"
             >
               <img
-                class="w-full h-full"
+                class="max-w-xl h-auto"
                 src="{{ x.pictures }}"
                 alt="Sunset in the mountains"
               />
-              <div class="px-6 pl-16">
+              <div class="sm:px-6 sm:pl-16 md:px-6 md:pl-16">
                 <div
                   class="bg-white rounded-full px-3 py-1  font-semibold text-black text-xl mr-2"
                 >
