--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -4,18 +4,18 @@
       <div class="w-full">
           <app-header></app-header>
           <div class="w-full">
-            <div class="flex flex-wrap md:flex-no-wrap sm:flex-no-wrap -mx-2 pb-12 pt-16 pr-16 pl-16">
+            <div class="flex flex-wrap md:flex-no-wrap sm:flex-wrap -mx-2 pb-12 pt-16 px-32 overflow-hidden">
               <div
                 *ngFor="let x of barOrDrink"
-                class="w-1/3 px-2 rounded overflow-hidden my-2"
+                class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden"
               >
                 <img
-                  class="w-full h-full cursor-pointer"
+                  class="max-w-xl h-auto cursor-pointer"
                   src="{{ x.main_image }}"
                   alt="Sunset in the mountains"
                   (click)="detail(x._id)"
                 />
-                <div class="px-6 pl-16">
+                <div class="sm:px-6 sm:pl-16 md:px-6 md:pl-16">
                   <div
                     class="bg-white rounded-full px-3 py-1 text-sm font-semibold text-black text-xl mr-2 hover: text-black"
                     (click)="detail(x._id)"
@@ -30,7 +30,6 @@
                 </div>
               </div>
             </div>
-            
           </div>
       </div>
   </div>
