--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -102,8 +102,8 @@
         <div class="h-2">
         </div>
         <div class="w-full flex items-center justify-center">
-            <div *ngIf="isLogged" (click)="getOut()" class="text-white">
-                <a class="hover:text-white">Tu perfil</a>
+            <div *ngIf="isLogged"  class="text-white">
+                <a href='/profile' class="hover:text-white">Tu perfil</a>
             </div>
             <div *ngIf="!isLogged" class="text-white">
                 <a href="/login" class="hover:text-white">Entrar</a>
