--- a/src/app/components/admin/drink/list-drink/list-drink.component.html
+++ b/src/app/components/admin/drink/list-drink/list-drink.component.html
@@ -5,53 +5,65 @@
   
   <app-admin-header></app-admin-header>
 
-  <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
-    <div>
-      <h2 class="text-4xl">LISTA DE TRAGOS</h2>
+  <div *ngIf="!loading" style="font-family: 'Open Sans', sans-serif;">
+    <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
+      <div>
+        <h2 class="text-4xl">LISTA DE TRAGOS</h2>
+      </div>
     </div>
-  </div>
+    <div class="w-full  flex justify-center items-center h-full">
+      <div class="w-2/3 md:3/4 lg:w-2/4 content-center">
+        <div class="w-full flex justify-center mb-6">
+              <button
+                (click)="create()"
+                class="w-2/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                type="button"
+              >
+                Crear
+              </button>
+        </div>
+        <div class="w-full flex justify-center mb-6">
+              <button
+                (click)="goBack()"
+                class="w-2/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                type="button"
+              >
+                Regresar
+              </button>
+        </div>
+      </div>
+    </div>
 
-  <div class="flex space-x-4 justify-center md:w-full pt-4 pb-8">
-    <button (click)="create()"
-      class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-      type="button">
-      Crear
-    </button>
-  </div>
-
-  
-
-    <div *ngIf="!loading">
+    <div>
       <div *ngFor="let d of drinks" class="w-full flex justify-center items-center h-full">
-        <div class="w-2/4 content-center">
-          <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
+        <div class="w-2/3 md:3/4 lg:w-2/4 content-center">
+
+          <div class="sm:flex sm:items-center mb-6">
+            <div class="w-full flex justify-center sm:justify-end lg:justify-center sm:w-2/5 sm:text-left">
               <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
                 {{ d.name }}
               </label>
             </div>
 
-
-
-            <div class="md:w-3/5">
-              <div class="flex space-x-4 justify-end md:w-full">
+            <div class="w-full sm:w-3/5">
+              <div class="flex space-x-2 justify-center sm:justify-end w-full">
                 <button (click)="editDrink(d._id)"
-                  class="md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="w-2/5 md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Editar
                 </button>
                 <button *ngIf="d.available" (click)="inhabilitateDrink(d._id)"
-                  class="md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="w-2/5 md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Eliminar
                 </button>
                 <button (click)="deleteDrink(d._id)"
-                  class="hidden md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="hidden w-2/5 md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Eliminar
                 </button>
                 <button *ngIf="!d.available" (click)="habilitateDrink(d._id)"
-                  class="md:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  class="w-2/5 md:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button">
                   Recuperar
                 </button>
@@ -60,9 +72,9 @@
           </div>  
         </div>
       </div>
-    
+      
   </div>
 
-    <app-footer></app-footer>
+  <app-footer></app-footer>
 
 </div>
